fix: verify step spinner causes jumpiness in ui
Problem:
The spinner that appears during the progress of the verify steps is
positioned above the progress bar wich causes the height of each row to
grow/shrink when the spinner appears/disappears.

Solution:
Make both spinner and progress bar inline-block elements to position
them next to each other.

--- a/public/css/deploy-unit-list.less
+++ b/public/css/deploy-unit-list.less
@@ -82,8 +82,12 @@
 	}
 }
 
+.unit-instance-verify-spinner {
+	display: inline-block;
+}
 
 .unit-instance-verify-glimps {
+	display: inline-block;
 
 	.verify-step {
 			display: inline-block;
